Ta med antatt godkjent opptjening til frontend