@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import no.nav.foreldrepenger.behandlingslager.behandling.opptjening.OpptjeningAktivitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.opptjening.OpptjeningAktivitetKlassifisering;
@@ -11,33 +12,35 @@ import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.fpsak.tidsserie.LocalDateSegment;
 import no.nav.fpsak.tidsserie.LocalDateSegmentCombinator;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
+import no.nav.fpsak.tidsserie.StandardCombinators;
 
 class MergeOverlappendePeriodeHjelp {
     private MergeOverlappendePeriodeHjelp() {
     }
 
-    static List<FastsattOpptjeningAktivitetDto> mergeOverlappenePerioder(List<OpptjeningAktivitet> opptjeningAktivitet) {
+    static List<FastsattOpptjeningDto.FastsattOpptjeningAktivitetDto> mergeOverlappenePerioder(List<OpptjeningAktivitet> opptjeningAktivitet) {
         var tidslinje = new LocalDateTimeline<OpptjeningAktivitetKlassifisering>(Collections.emptyList());
-        tidslinje = slåSammenTidslinje(tidslinje, opptjeningAktivitet, OpptjeningAktivitetKlassifisering.BEKREFTET_GODKJENT, MergeOverlappendePeriodeHjelp::mergeGodkjente);
+        tidslinje = slåSammenTidslinje(tidslinje, opptjeningAktivitet, OpptjeningAktivitetKlassifisering.BEKREFTET_GODKJENT, StandardCombinators::coalesceRightHandSide);
         tidslinje = slåSammenTidslinje(tidslinje, opptjeningAktivitet, OpptjeningAktivitetKlassifisering.MELLOMLIGGENDE_PERIODE, MergeOverlappendePeriodeHjelp::mergeMellomliggende);
-        tidslinje = slåSammenTidslinje(tidslinje, opptjeningAktivitet, OpptjeningAktivitetKlassifisering.BEKREFTET_AVVIST, MergeOverlappendePeriodeHjelp::mergeBekreftAvvist);
+        tidslinje = slåSammenTidslinje(tidslinje, opptjeningAktivitet, OpptjeningAktivitetKlassifisering.ANTATT_GODKJENT, StandardCombinators::coalesceLeftHandSide);
+        tidslinje = slåSammenTidslinje(tidslinje, opptjeningAktivitet, OpptjeningAktivitetKlassifisering.BEKREFTET_AVVIST, StandardCombinators::coalesceLeftHandSide);
         return lagDtoer(tidslinje);
 
     }
 
-    private static List<FastsattOpptjeningAktivitetDto> lagDtoer(LocalDateTimeline<OpptjeningAktivitetKlassifisering> resultatInn) {
+    private static List<FastsattOpptjeningDto.FastsattOpptjeningAktivitetDto> lagDtoer(LocalDateTimeline<OpptjeningAktivitetKlassifisering> resultatInn) {
         if (resultatInn == null) {
             return Collections.emptyList();
         }
-        List<FastsattOpptjeningAktivitetDto> resultat = new ArrayList<>();
+        List<FastsattOpptjeningDto.FastsattOpptjeningAktivitetDto> resultat = new ArrayList<>();
         var datoIntervaller = resultatInn.getLocalDateIntervals();
         for (var intervall : datoIntervaller) {
             var segment = resultatInn.getSegment(intervall);
             var klassifisering = segment.getValue();
-            resultat.add(new FastsattOpptjeningAktivitetDto(intervall.getFomDato(), intervall.getTomDato(),
+            resultat.add(new FastsattOpptjeningDto.FastsattOpptjeningAktivitetDto(intervall.getFomDato(), intervall.getTomDato(),
                     klassifisering));
         }
-        resultat.sort(Comparator.comparing(FastsattOpptjeningAktivitetDto::getFom));
+        resultat.sort(Comparator.comparing(FastsattOpptjeningDto.FastsattOpptjeningAktivitetDto::fom));
         return resultat;
     }
 
@@ -45,11 +48,12 @@ class MergeOverlappendePeriodeHjelp {
         LocalDateTimeline<OpptjeningAktivitetKlassifisering> tidsserie, List<OpptjeningAktivitet> opptjeningAktivitet, OpptjeningAktivitetKlassifisering filter,
         LocalDateSegmentCombinator<OpptjeningAktivitetKlassifisering, OpptjeningAktivitetKlassifisering, OpptjeningAktivitetKlassifisering> combinator) {
 
-        for (var aktivitet : opptjeningAktivitet.stream().filter(oa -> filter.equals(oa.getKlassifisering())).toList()) {
-            var timeline = new LocalDateTimeline<OpptjeningAktivitetKlassifisering>(aktivitet.getFom(), aktivitet.getTom(), filter);
-            tidsserie = tidsserie.combine(timeline, combinator, LocalDateTimeline.JoinStyle.CROSS_JOIN);
-        }
-        return tidsserie.compress();
+        var linjeForFilter = opptjeningAktivitet.stream()
+            .filter(oa -> filter.equals(oa.getKlassifisering()))
+            .map(a -> new LocalDateSegment<>(a.getFom(), a.getTom(), filter))
+            .collect(Collectors.collectingAndThen(Collectors.toList(), s -> new LocalDateTimeline<>(s, StandardCombinators::coalesceLeftHandSide)));
+
+        return tidsserie.combine(linjeForFilter, combinator, LocalDateTimeline.JoinStyle.CROSS_JOIN).compress();
     }
 
     private static LocalDateSegment<OpptjeningAktivitetKlassifisering> mergeMellomliggende(LocalDateInterval di,
@@ -67,27 +71,4 @@ class MergeOverlappendePeriodeHjelp {
         return new LocalDateSegment<>(di, OpptjeningAktivitetKlassifisering.BEKREFTET_GODKJENT);
     }
 
-    private static LocalDateSegment<OpptjeningAktivitetKlassifisering> mergeBekreftAvvist(LocalDateInterval di,
-            LocalDateSegment<OpptjeningAktivitetKlassifisering> lhs,
-            LocalDateSegment<OpptjeningAktivitetKlassifisering> rhs) {
-
-        // legger inn perioden for bekreftet avvist
-        if (lhs == null || lhs.getValue().equals(OpptjeningAktivitetKlassifisering.BEKREFTET_AVVIST)) {
-            return new LocalDateSegment<>(di, OpptjeningAktivitetKlassifisering.BEKREFTET_AVVIST);
-        }
-        if (rhs == null) {
-            return new LocalDateSegment<>(di, lhs.getValue());
-        }
-        return new LocalDateSegment<>(di, lhs.getValue());
-    }
-
-    private static LocalDateSegment<OpptjeningAktivitetKlassifisering> mergeGodkjente(LocalDateInterval di,
-            LocalDateSegment<OpptjeningAktivitetKlassifisering> lhs,
-            LocalDateSegment<OpptjeningAktivitetKlassifisering> rhs) {
-        if (lhs != null) {
-            return new LocalDateSegment<>(di, OpptjeningAktivitetKlassifisering.BEKREFTET_GODKJENT);
-        }
-        var value = rhs.getValue();
-        return new LocalDateSegment<>(di, value);
-    }
 }
